fixed alignment issues

--- a/Client/src/Pages/home.css
+++ b/Client/src/Pages/home.css
@@ -42,9 +42,9 @@ h2 {
 }
 
 /* WEATHER */
-.weather {
+/* .weather {
   float: left;
-}
+} */
 
 /* CALENDAR */
 .calendar {
